# GLFWFramework

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindKinectSDKv2.cmake
resources/calibration/: Display1.txt  NarvisMonitor.txt
resources/meshes/: mandible_split.ply  skull.ply  skull_split.ply
resources/meshes/button3D/: button3D.mtl
resources/meshes/digSystem/: digSystem.mtl
resources/meshes/organs/: organs.mtl
resources/shaders/: DR.fs  Lighting.fs  Lighting.vs  MULTI_TEXTURE.fs  PostProcessing.fs  PostProcessing.vs  QR.fs  SIMPLE.fs  SIMPLE.vs  TEXTURE.fs  TEXTURE.vs  TEXTURE3D.fs  TEXTURE_ASSIMP.fs  TEXTURE_ASSIMP.vs  shaderSingleColor.fs
src/: CMakeLists.txt
src/CommonLib/: CMakeLists.txt  Common.h
src/CommonLib/glfw/: GLFWApp.cpp  GLFWApp.h
src/CommonLib/gui/: Button.cpp  Button.h
src/CommonLib/opengl/: BackgroundQuad.cpp  BackgroundQuad.h  Camera.cpp  Camera.h  FramebufferObject.cpp  FramebufferObject.h  GLUtils.cpp  GLUtils.h  ShaderProgram.cpp  ShaderProgram.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h
src/CommonLib/shapes/: Drawable.cpp  Drawable.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PLYMesh.cpp  PLYMesh.h  Picking.cpp  Picking.h  Sphere.cpp  Sphere.h
src/ExamplesCommon/: 10_SubroutineBloomEffect.cpp  11_TexturedSphere.cpp  12_BasicTextRendering.cpp  1_BasicGLFWwindow.cpp  2_OpenCVBackgroundTexture.cpp  3_ColoredTriangle.cpp  4_FPSCamera.cpp  5_SubroutineLighting.cpp  6_SubroutineEdgeDetectionOpenCVBackgroundTexture.cpp  7_SubroutineEdgeDetectionMesh.cpp  8_SubroutineGaussianBlurOpenCVBackgroundTexture.cpp  9_SubroutineGaussianBlurMesh.cpp
src/ExamplesKinect/: 10_SmartGestureApp.cpp  11_BodyRegionZoomApp.cpp  1_ColorStreamBackgroundTextureApp.cpp  2_SkeletonLinesOpenCVApp.cpp  3_SleketonJointsSphereOverlayApp.cpp  4_FaceTrackingApp.cpp  5_HDFaceTrackingApp.cpp  6_HDFaceSkullOverlayApp.cpp  7_DiminishedRealitySkullApp.cpp  8_SplitscreenSkullAR_VR.cpp  9_SplitscreenSkullAR_ImageStack.cpp
src/KinectLib/: Body.cpp  Body.h  CMakeLists.txt  CommonKinect.h  DeviceOptions.cpp  DeviceOptions.h  KinectDataManager.cpp  KinectDataManager.h  KinectUtilities.h
src/SmartGestureLib/: CMakeLists.txt  CommonSmartGesture.h
src/SmartGestureLib/gui/: Button3D.cpp  Button3D.h  ButtonsVR.cpp  ButtonsVR.h  CursorHistory.cpp  CursorHistory.h
src/SmartGestureLib/organs/: OrganModel.cpp  OrganModel.h
src/SmartGestureLib/screen/: ConfigHandler.cpp  ConfigHandler.h
src/SmartGestureLib/socket/: AsyncUDPServer.cpp  AsyncUDPServer.h
